--- a/GUI/animals.html
+++ b/GUI/animals.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>View Dogs</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
@@ -29,15 +29,28 @@
             <li>View Dogs</li>
             <li>View Booking</li>
             <li>View Tracks</li>
-            <li>Admins</li>
+            <li class="admin">Admins</li>
         </ul>
     </nav>
-
     <main>
+        <div class="dogs">
+            <img src="../images/huge.jpg">
+            <h3>Fido</h3>
+            <p>ID: </p>
+            <p>Breed: </p>
+            <p>Size: </p>
+            <p></p>  <!-- This is for description -->
+            <p>Price: $
+                <span></span>
+                <input type="button" class="chooseDog" value="Select">
+            </p>
 
+        </div>
     </main>
+
     <footer>
 
     </footer>
+
 </body>
 </html>
