Create a basic booking page

--- a/GUI/animals.html
+++ b/GUI/animals.html
@@ -25,10 +25,10 @@
 
     <nav id="sidebar">
         <ul>
-            <li>Home</li>
-            <li>View Dogs</li>
-            <li>View Booking</li>
-            <li>View Tracks</li>
+            <li>Home
+            <li>View Dogs
+            <li><a href="booking.html">View Booking</a>
+            <li>View Tracks
             <li class="admin">Admins</li>
         </ul>
     </nav>
@@ -44,7 +44,42 @@
                 <span></span>
                 <input type="button" class="chooseDog" value="Select">
             </p>
-
+        </div>
+        <div class="dogs">
+            <img src="../images/large.jpg">
+            <h3>Fido</h3>
+            <p>ID: </p>
+            <p>Breed: </p>
+            <p>Size: </p>
+            <p></p>  <!-- This is for description -->
+            <p>Price: $
+                <span></span>
+                <input type="button" class="chooseDog" value="Select">
+            </p>
+        </div>
+        <div class="dogs">
+            <img src="../images/small.jpg">
+            <h3>Fido</h3>
+            <p>ID: </p>
+            <p>Breed: </p>
+            <p>Size: </p>
+            <p></p>  <!-- This is for description -->
+            <p>Price: $
+                <span></span>
+                <input type="button" class="chooseDog" value="Select">
+            </p>
+        </div>
+        <div class="dogs">
+            <img src="../images/medium.jpg">
+            <h3>Fido</h3>
+            <p>ID: </p>
+            <p>Breed: </p>
+            <p>Size: </p>
+            <p></p>  <!-- This is for description -->
+            <p>Price: $
+                <span></span>
+                <input type="button" class="chooseDog" value="Select">
+            </p>
         </div>
     </main>
 
