Add links between pages, apart from admin page

--- a/GUI/admin.html
+++ b/GUI/admin.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+    <header>
+        <h1> Dog Rental Service</h1>
+        <h2> Administrator View</h2>
+    </header>
+
+    <nav id="sidebar">
+        <ul>
+            <li><a href="index.html">Home</a>
+            <li class="admin">Admins</li>
+        </ul>
+    </nav>
 
 </body>
 </html>
