--- a/GUI/animals.html
+++ b/GUI/animals.html
@@ -25,10 +25,10 @@
 
     <nav id="sidebar">
         <ul>
-            <li>Home
+            <li><a href="index.html">Home</a>
             <li>View Dogs
             <li><a href="booking.html">View Booking</a>
-            <li>View Tracks
+            <li><a href="tracks.html">View Tracks</a>
             <li class="admin">Admins</li>
         </ul>
     </nav>
