--- a/GUI/booking.html
+++ b/GUI/booking.html
@@ -25,10 +25,10 @@
 
     <nav id="sidebar">
         <ul>
-            <li>Home</li>
-            <li>View Dogs</li>
-            <li>View Booking</li>
-            <li>View Tracks</li>
+            <li><a href="index.html">Home</a>
+            <li><a href="animals.html"> View Dogs </a>
+            <li>View Booking
+            <li><a href="tracks.html">View Tracks</a>
             <li class="admin">Admins</li>
         </ul>
     </nav>
