--- a/GUI/index.html
+++ b/GUI/index.html
@@ -25,11 +25,11 @@
 
     <nav id="sidebar">
         <ul>
-            <li>Home</li>
-            <li>View Dogs</li>
-            <li>View Booking</li>
-            <li>View Tracks</li>
-            <li>Admins</li>
+            <li>Home
+            <li><a href="animals.html">View Dogs</a>
+            <li><a href="booking.html">View Booking</a>
+            <li><a href="tracks.html">View Tracks</a>
+            <li class="admin">Admins</li>
         </ul>
     </nav>
 
