--- a/GUI/tracks.html
+++ b/GUI/tracks.html
@@ -25,10 +25,10 @@
 
     <nav id="sidebar">
         <ul>
-            <li>Home</li>
-            <li>View Dogs</li>
-            <li>View Booking</li>
-            <li>View Tracks</li>
+            <li><a href="index.html">Home</a>
+            <li><a href="animals.html">View Dogs</a>
+            <li><a href="booking.html">View Booking</a>
+            <li>View Tracks
             <li class="admin">Admins</li>
         </ul>
     </nav>
