Make navigation bar interactive

--- a/GUI/booking.html
+++ b/GUI/booking.html
@@ -27,7 +27,7 @@
         <ul>
             <li><a href="index.html">Home</a>
             <li><a href="animals.html"> View Dogs </a>
-            <li>View Booking
+            <li class="current">View Booking
             <li><a href="tracks.html">View Tracks</a>
             <li class="admin">Admins</li>
         </ul>
