--- a/GUI/index.html
+++ b/GUI/index.html
@@ -25,7 +25,7 @@
 
     <nav id="sidebar">
         <ul>
-            <li>Home
+            <li class="current">Home
             <li><a href="animals.html">View Dogs</a>
             <li><a href="booking.html">View Booking</a>
             <li><a href="tracks.html">View Tracks</a>
