--- a/GUI/tracks.html
+++ b/GUI/tracks.html
@@ -28,7 +28,7 @@
             <li><a href="index.html">Home</a>
             <li><a href="animals.html">View Dogs</a>
             <li><a href="booking.html">View Booking</a>
-            <li>View Tracks
+            <li class="current">View Tracks
             <li class="admin">Admins</li>
         </ul>
     </nav>
