--- a/GUI/animals.html
+++ b/GUI/animals.html
@@ -26,7 +26,7 @@
     <nav id="sidebar">
         <ul>
             <li><a href="index.html">Home</a>
-            <li>View Dogs
+            <li class="current">View Dogs
             <li><a href="booking.html">View Booking</a>
             <li><a href="tracks.html">View Tracks</a>
             <li class="admin">Admins</li>
