Add color scheme to page

--- a/GUI/animals.html
+++ b/GUI/animals.html
@@ -35,51 +35,59 @@
     <main>
         <div class="dogs">
             <img src="../images/huge.jpg">
-            <h3>Fido</h3>
-            <p>ID: </p>
-            <p>Breed: </p>
-            <p>Size: </p>
-            <p></p>  <!-- This is for description -->
-            <p>Price: $
-                <span></span>
-                <input type="button" class="chooseDog" value="Select">
-            </p>
+            <div class="dogInfo">
+                <h3>Fido</h3>
+                <p>ID: </p>
+                <p>Breed: </p>
+                <p>Size: </p>
+                <p></p>  <!-- This is for description -->
+                <p>Price: $
+                    <span></span>
+                    <input type="button" class="chooseDog" value="Select">
+                </p>
+            </div>
         </div>
         <div class="dogs">
             <img src="../images/large.jpg">
-            <h3>Fido</h3>
-            <p>ID: </p>
-            <p>Breed: </p>
-            <p>Size: </p>
-            <p></p>  <!-- This is for description -->
-            <p>Price: $
-                <span></span>
-                <input type="button" class="chooseDog" value="Select">
-            </p>
+            <div class="dogInfo">
+                <h3>Fido</h3>
+                <p>ID: </p>
+                <p>Breed: </p>
+                <p>Size: </p>
+                <p></p>  <!-- This is for description -->
+                <p>Price: $
+                    <span></span>
+                    <input type="button" class="chooseDog" value="Select">
+                </p>
+            </div>
         </div>
         <div class="dogs">
             <img src="../images/small.jpg">
-            <h3>Fido</h3>
-            <p>ID: </p>
-            <p>Breed: </p>
-            <p>Size: </p>
-            <p></p>  <!-- This is for description -->
-            <p>Price: $
-                <span></span>
-                <input type="button" class="chooseDog" value="Select">
-            </p>
+            <div class="dogInfo">
+                <h3>Fido</h3>
+                <p>ID: </p>
+                <p>Breed: </p>
+                <p>Size: </p>
+                <p></p>  <!-- This is for description -->
+                <p>Price: $
+                    <span></span>
+                    <input type="button" class="chooseDog" value="Select">
+                </p>
+            </div>
         </div>
         <div class="dogs">
             <img src="../images/medium.jpg">
-            <h3>Fido</h3>
-            <p>ID: </p>
-            <p>Breed: </p>
-            <p>Size: </p>
-            <p></p>  <!-- This is for description -->
-            <p>Price: $
-                <span></span>
-                <input type="button" class="chooseDog" value="Select">
-            </p>
+            <div class="dogInfo">
+                <h3>Fido</h3>
+                <p>ID: </p>
+                <p>Breed: </p>
+                <p>Size: </p>
+                <p></p>  <!-- This is for description -->
+                <p>Price: $
+                    <span></span>
+                    <input type="button" class="chooseDog" value="Select">
+                </p>
+            </div>
         </div>
     </main>
 
