Adjust for smaller screen

--- a/GUI/admin.html
+++ b/GUI/admin.html
@@ -14,7 +14,7 @@
     <nav id="sidebar">
         <ul>
             <li><a href="index.html">Home</a>
-            <li class="admin">Admins</li>
+            <li class="admin current">Admins</li>
         </ul>
     </nav>
 
