--- a/GUI/animals.html
+++ b/GUI/animals.html
@@ -28,13 +28,13 @@
             <li><a href="index.html">Home</a>
             <li class="current">View Dogs
             <li><a href="booking.html">View Booking</a>
-            <li><a href="tracks.html">View Tracks</a>
+            <li><a href="tracks.html">Points of Interest</a>
             <li class="admin">Admins</li>
         </ul>
     </nav>
     <main>
         <div class="dogs">
-            <img src="../images/huge.jpg">
+            <img src="../images/huge.jpg" alt="St.Bernard">
             <div class="dogInfo">
                 <h3>Fido</h3>
                 <p>ID: </p>
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="dogs">
-            <img src="../images/large.jpg">
+            <img src="../images/large.jpg" alt="Retreiver">
             <div class="dogInfo">
                 <h3>Fido</h3>
                 <p>ID: </p>
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="dogs">
-            <img src="../images/small.jpg">
+            <img src="../images/small.jpg" alt="Poodle">
             <div class="dogInfo">
                 <h3>Fido</h3>
                 <p>ID: </p>
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div class="dogs">
-            <img src="../images/medium.jpg">
+            <img src="../images/medium.jpg" alt="Springer Spanial">
             <div class="dogInfo">
                 <h3>Fido</h3>
                 <p>ID: </p>
