--- a/GUI/booking.html
+++ b/GUI/booking.html
@@ -28,7 +28,7 @@
             <li><a href="index.html">Home</a>
             <li><a href="animals.html"> View Dogs </a>
             <li class="current">View Booking
-            <li><a href="tracks.html">View Tracks</a>
+            <li><a href="tracks.html">Points of Interest</a>
             <li class="admin">Admins</li>
         </ul>
     </nav>
