--- a/GUI/index.html
+++ b/GUI/index.html
@@ -28,7 +28,7 @@
             <li class="current">Home
             <li><a href="animals.html">View Dogs</a>
             <li><a href="booking.html">View Booking</a>
-            <li><a href="tracks.html">View Tracks</a>
+            <li><a href="tracks.html">Points of Interest</a>
             <li class="admin">Admins</li>
         </ul>
     </nav>
