Adding texts to the index page

--- a/GUI/index.html
+++ b/GUI/index.html
@@ -34,7 +34,15 @@
     </nav>
 
     <main>
-
+        <section class="welcome">
+            <h2> Welcome to Dog Rental Service</h2>
+            <p> Here, we have a variety of dog breeds with various size for your every needs.
+            From a small lap poodle to a huge cuddly Retriever.</p>
+            <p> You can select up to 3 of these beautiful pets in a booking.</p>
+            <p> So what are you waiting for? Come browse our collection of man's best friends</p>
+            <p> Don't forget to check out our <a href="tracks.html">points of interest</a> list of possible walking tracks to give these guys a
+                bit of exercises.</p>
+        </section>
     </main>
     <footer>
 
