Create javascript files for the tracking map

--- a/GUI/tracks.html
+++ b/GUI/tracks.html
@@ -33,7 +33,16 @@
         </ul>
     </nav>
 
-    <main></main>
+    <main>
+        <div class="map">
+
+        </div>
+        <ul class="pointsOfInterest">
+            <li>
+                <h3>Car Rental Office</h3>
+            </li>
+        </ul>
+    </main>
     <footer></footer>
 
 </body>
