Dynamically add dog based on the source file

--- a/GUI/animals.html
+++ b/GUI/animals.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>View Dogs</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="../helpers/jQuery/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <header>
@@ -42,7 +43,7 @@
                 <p>Size: </p>
                 <p></p>  <!-- This is for description -->
                 <p>Price: $
-                    <span></span>
+                    <span class="price"></span>
                     <input type="button" class="chooseDog" value="Select">
                 </p>
             </div>
@@ -56,7 +57,7 @@
                 <p>Size: </p>
                 <p></p>  <!-- This is for description -->
                 <p>Price: $
-                    <span></span>
+                    <span class="price"></span>
                     <input type="button" class="chooseDog" value="Select">
                 </p>
             </div>
@@ -70,7 +71,7 @@
                 <p>Size: </p>
                 <p></p>  <!-- This is for description -->
                 <p>Price: $
-                    <span></span>
+                    <span class="price"></span>
                     <input type="button" class="chooseDog" value="Select">
                 </p>
             </div>
@@ -84,7 +85,7 @@
                 <p>Size: </p>
                 <p></p>  <!-- This is for description -->
                 <p>Price: $
-                    <span></span>
+                    <span class="price"></span>
                     <input type="button" class="chooseDog" value="Select">
                 </p>
             </div>
@@ -94,6 +95,9 @@
     <footer>
 
     </footer>
+
+
+    <script src="../scripts/dogs.js"></script>
 
 </body>
 </html>
