--- a/GUI/view.html
+++ b/GUI/view.html
@@ -56,6 +56,6 @@
     </footer>
 
 
-    <script src="../scripts/reviews.js"></script>
+    <script src="../scripts/viewDog.js"></script>
 </body>
 </html>
