--- a/GUI/index.html
+++ b/GUI/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="../helpers/jQuery/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <header>
@@ -43,9 +44,15 @@
             <p> Don't forget to check out our <a href="tracks.html">points of interest</a> list of possible walking tracks to give these guys a
                 bit of exercises.</p>
         </section>
+        <section class="reviews">
+            <h2> Check out what the other customers say about us </h2>
+        </section>
     </main>
     <footer>
 
     </footer>
+
+
+    <script src="../scripts/reviews.js"></script>
 </body>
 </html>
