Create the admin view of existing bookings

--- a/GUI/admin.html
+++ b/GUI/admin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Admin</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="../helpers/jQuery/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <header>
@@ -18,5 +19,19 @@
         </ul>
     </nav>
 
+    <main>
+        <h2> Existing bookings</h2>
+        <table class="bookings">
+            <thead>
+                <tr>
+                    <th>Dog ID</th><th>Name</th>
+                    <th>Pickup</th><th>Num Hours</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </main>
+
+    <script src="../scripts/admin.js"></script>
 </body>
 </html>
