--- a/GUI/index.html
+++ b/GUI/index.html
@@ -17,7 +17,9 @@
                     <label for="loginPassword">Password: </label>
                     <input type="text" for="loginPassword" id="loginPassword"><br>
                     <input type="submit" id="loginSubmit" value="Login"><br>
-                    <input type="button" id="loginAdmin" value="Login as Admin">
+                    <a href="admin.html">
+                        <input type="button" id="loginAdmin" value="Login as Admin">
+                    </a>
                 </form>
             </div>
         </div>
@@ -29,8 +31,7 @@
             <li class="current">Home
             <li><a href="animals.html">View Dogs</a>
             <li><a href="booking.html">View Booking</a>
-            <li><a href="tracks.html">Points of Interest</a>
-            <li class="admin">Admins</li>
+            <li><a href="tracks.html">Points of Interest</a></li>
         </ul>
     </nav>
 
