--- a/GUI/booking.html
+++ b/GUI/booking.html
@@ -16,7 +16,9 @@
                     <label for="loginPassword">Password: </label>
                     <input type="text" for="loginPassword" id="loginPassword"><br>
                     <input type="submit" id="loginSubmit" value="Login"><br>
-                    <input type="button" id="loginAdmin" value="Login as Admin">
+                    <a href="admin.html">
+                        <input type="button" id="loginAdmin" value="Login as Admin">
+                    </a>
                 </form>
             </div>
         </div>
@@ -28,8 +30,7 @@
             <li><a href="index.html">Home</a>
             <li><a href="animals.html"> View Dogs </a>
             <li class="current">View Booking
-            <li><a href="tracks.html">Points of Interest</a>
-            <li class="admin">Admins</li>
+            <li><a href="tracks.html">Points of Interest</a></li>
         </ul>
     </nav>
 
