--- a/GUI/animals.html
+++ b/GUI/animals.html
@@ -36,58 +36,66 @@
     </nav>
     <main>
         <div class="dogs">
-            <img src="../images/huge.jpg" alt="St.Bernard">
-            <div class="dogInfo">
-                <h3>Fido</h3>
-                <p>ID: </p>
-                <p>Breed: </p>
-                <p>Size: </p>
-                <p></p>  <!-- This is for description -->
-                <p>Price: $
-                    <span class="price"></span>
-                    <input type="button" class="chooseDog" value="Select">
-                </p>
-            </div>
-        </div>
-        <div class="dogs">
-            <img src="../images/large.jpg" alt="Retreiver">
-            <div class="dogInfo">
-                <h3>Fido</h3>
-                <p>ID: </p>
-                <p>Breed: </p>
-                <p>Size: </p>
-                <p></p>  <!-- This is for description -->
-                <p>Price: $
-                    <span class="price"></span>
-                    <input type="button" class="chooseDog" value="Select">
-                </p>
-            </div>
-        </div>
-        <div class="dogs">
             <img src="../images/small.jpg" alt="Poodle">
             <div class="dogInfo">
                 <h3>Fido</h3>
-                <p>ID: </p>
-                <p>Breed: </p>
-                <p>Size: </p>
-                <p></p>  <!-- This is for description -->
+                <p>ID: DW-001</p>
+                <p>Breed: Poodle</p>
+                <p>Size: Small</p>
+                <p>Excellant lap dog, doesn't shed.</p>
                 <p>Price: $
-                    <span class="price"></span>
-                    <input type="button" class="chooseDog" value="Select">
+                    <span class="price">3.0</span>
+                    <br> <input type="button" class="viewDog" value="More Info">
+                    &nbsp&nbsp
+                    <input type="button" class="chooseDog" value="Add To Booking">
                 </p>
             </div>
         </div>
         <div class="dogs">
             <img src="../images/medium.jpg" alt="Springer Spanial">
             <div class="dogInfo">
-                <h3>Fido</h3>
-                <p>ID: </p>
-                <p>Breed: </p>
-                <p>Size: </p>
-                <p></p>  <!-- This is for description -->
+                <h3>Rover</h3>
+                <p>ID: DW-002</p>
+                <p>Breed: Springer Spanial</p>
+                <p>Size: Medium</p>
+                <p>Very energetic, loves water. Good with kids</p>
                 <p>Price: $
-                    <span class="price"></span>
-                    <input type="button" class="chooseDog" value="Select">
+                    <span class="price">5.0</span>
+                    <br> <input type="button" class="viewDog" value="More Info">
+                    &nbsp&nbsp
+                    <input type="button" class="chooseDog" value="Add To Booking">
+                </p>
+            </div>
+        </div>
+        <div class="dogs">
+            <img src="../images/large.jpg" alt="Retreiver">
+            <div class="dogInfo">
+                <h3>Rex</h3>
+                <p>ID: DW-003</p>
+                <p>Breed: Retreiver</p>
+                <p>Size: Large</p>
+                <p>Eats everything, very friendly. Slobbers a lot.</p>
+                <p>Price: $
+                    <span class="price">5.0</span>
+                    <br> <input type="button" class="viewDog" value="More Info">
+                    &nbsp&nbsp
+                    <input type="button" class="chooseDog" value="Add To Booking">
+                </p>
+            </div>
+        </div>
+        <div class="dogs">
+            <img src="../images/huge.jpg" alt="St. Bernard">
+            <div class="dogInfo">
+                <h3>Digby</h3>
+                <p>ID: DW-004</p>
+                <p>Breed: St. Bernard</p>
+                <p>Size: Huge</p>
+                <p>Excellant horse replacement</p>
+                <p>Price: $
+                    <span class="price">10.0</span>
+                    <br> <input type="button" class="viewDog" value="More Info">
+                    &nbsp&nbsp
+                    <input type="button" class="chooseDog" value="Add To Booking">
                 </p>
             </div>
         </div>
