Focus Map and show hide marker on selected items

--- a/GUI/tracks.html
+++ b/GUI/tracks.html
@@ -43,8 +43,12 @@
 
         </div>
         <ul id="pointsOfInterest">
+
             <li>
-                <h3>Car Rental Office</h3>
+                <p class="location"> Car Rental Office
+                <i> - campsite</i>
+                <input type="button" class="showOnMap" value="Show on map">
+                <input type="checkbox" class="showHide" name="checkbox" checked></p>
             </li>
         </ul>
     </main>
