Store dog information in local Storage when added

--- a/GUI/animals.html
+++ b/GUI/animals.html
@@ -39,7 +39,7 @@
             <img src="../images/small.jpg" alt="Poodle">
             <div class="dogInfo">
                 <h3>Fido</h3>
-                <p>ID: DW-001</p>
+                <p>ID: <span class="dogId">DW-001</span></p>
                 <p>Breed: Poodle</p>
                 <p>Size: Small</p>
                 <p>Excellant lap dog, doesn't shed.</p>
@@ -55,7 +55,7 @@
             <img src="../images/medium.jpg" alt="Springer Spanial">
             <div class="dogInfo">
                 <h3>Rover</h3>
-                <p>ID: DW-002</p>
+                <p>ID: <span class="dogId">DW-002</span></p>
                 <p>Breed: Springer Spanial</p>
                 <p>Size: Medium</p>
                 <p>Very energetic, loves water. Good with kids</p>
@@ -71,7 +71,7 @@
             <img src="../images/large.jpg" alt="Retreiver">
             <div class="dogInfo">
                 <h3>Rex</h3>
-                <p>ID: DW-003</p>
+                <p>ID: <span class="dogId">DW-003</span></p>
                 <p>Breed: Retreiver</p>
                 <p>Size: Large</p>
                 <p>Eats everything, very friendly. Slobbers a lot.</p>
@@ -87,7 +87,7 @@
             <img src="../images/huge.jpg" alt="St. Bernard">
             <div class="dogInfo">
                 <h3>Digby</h3>
-                <p>ID: DW-004</p>
+                <p>ID: <span class="dogId">DW-004</span></p>
                 <p>Breed: St. Bernard</p>
                 <p>Size: Huge</p>
                 <p>Excellant horse replacement</p>
@@ -107,6 +107,7 @@
 
 
     <script src="../scripts/dogs.js"></script>
+    <script src="../scripts/booking.js"></script>
 
 </body>
 </html>
