Add date and time for booking

--- a/GUI/animals.html
+++ b/GUI/animals.html
@@ -35,68 +35,77 @@
         </ul>
     </nav>
     <main>
-        <div class="dogs">
-            <img src="../images/small.jpg" alt="Poodle">
-            <div class="dogInfo">
-                <h3>Fido</h3>
-                <p>ID: <span class="dogId">DW-001</span></p>
-                <p>Breed: Poodle</p>
-                <p>Size: Small</p>
-                <p>Excellant lap dog, doesn't shed.</p>
-                <p>Price: $
-                    <span class="price">3.0</span>
-                    <br> <input type="button" class="viewDog" value="More Info">
-                    &nbsp&nbsp
-                    <input type="button" class="chooseDog" value="Add To Booking">
-                </p>
+        <form id="pickupSelect">
+            <input type="date" id="pickupDate" name="pickupDate"
+                   value="2021-07-22"
+                   min="2021-01-01" max="2022-12-31" required>
+            <input type="time" id="pickupTime" name="pickupTime"
+                   value="14:00"
+                   min="09:00" max="18:00" required>
+            <small for="pickupTime"> Office hours are between 9:00 and 16:00</small>
+            <br>
+            <label for="numHours">Number of Hours: </label>
+            <input type="text" id="numHours" required>
+            <small id="numHoursError">Please put in number of hours.</small>
+            <br>
+            <input type="submit" id="applyPickup" value="See Available dogs">
+        </form>
+        <div class="availableDogs">
+            <div class="dogs">
+                <img src="../images/small.jpg" alt="Poodle">
+                <div class="dogInfo">
+                    <h3>Fido</h3>
+                    <p>ID: <span class="dogId">DW-001</span></p>
+                    <p>Breed: Poodle</p>
+                    <p>Size: Small</p>
+                    <p>Excellant lap dog, doesn't shed.</p>
+                    <p>Price: $
+                        <span class="price">3.0</span>
+                        <br> <input type="button" class="viewDog" value="More Info">
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="dogs">
-            <img src="../images/medium.jpg" alt="Springer Spanial">
-            <div class="dogInfo">
-                <h3>Rover</h3>
-                <p>ID: <span class="dogId">DW-002</span></p>
-                <p>Breed: Springer Spanial</p>
-                <p>Size: Medium</p>
-                <p>Very energetic, loves water. Good with kids</p>
-                <p>Price: $
-                    <span class="price">5.0</span>
-                    <br> <input type="button" class="viewDog" value="More Info">
-                    &nbsp&nbsp
-                    <input type="button" class="chooseDog" value="Add To Booking">
-                </p>
+            <div class="dogs">
+                <img src="../images/medium.jpg" alt="Springer Spanial">
+                <div class="dogInfo">
+                    <h3>Rover</h3>
+                    <p>ID: <span class="dogId">DW-002</span></p>
+                    <p>Breed: Springer Spanial</p>
+                    <p>Size: Medium</p>
+                    <p>Very energetic, loves water. Good with kids</p>
+                    <p>Price: $
+                        <span class="price">5.0</span>
+                        <br> <input type="button" class="viewDog" value="More Info">
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="dogs">
-            <img src="../images/large.jpg" alt="Retreiver">
-            <div class="dogInfo">
-                <h3>Rex</h3>
-                <p>ID: <span class="dogId">DW-003</span></p>
-                <p>Breed: Retreiver</p>
-                <p>Size: Large</p>
-                <p>Eats everything, very friendly. Slobbers a lot.</p>
-                <p>Price: $
-                    <span class="price">5.0</span>
-                    <br> <input type="button" class="viewDog" value="More Info">
-                    &nbsp&nbsp
-                    <input type="button" class="chooseDog" value="Add To Booking">
-                </p>
+            <div class="dogs">
+                <img src="../images/large.jpg" alt="Retreiver">
+                <div class="dogInfo">
+                    <h3>Rex</h3>
+                    <p>ID: <span class="dogId">DW-003</span></p>
+                    <p>Breed: Retreiver</p>
+                    <p>Size: Large</p>
+                    <p>Eats everything, very friendly. Slobbers a lot.</p>
+                    <p>Price: $
+                        <span class="price">5.0</span>
+                        <br> <input type="button" class="viewDog" value="More Info">
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="dogs">
-            <img src="../images/huge.jpg" alt="St. Bernard">
-            <div class="dogInfo">
-                <h3>Digby</h3>
-                <p>ID: <span class="dogId">DW-004</span></p>
-                <p>Breed: St. Bernard</p>
-                <p>Size: Huge</p>
-                <p>Excellant horse replacement</p>
-                <p>Price: $
-                    <span class="price">10.0</span>
-                    <br> <input type="button" class="viewDog" value="More Info">
-                    &nbsp&nbsp
-                    <input type="button" class="chooseDog" value="Add To Booking">
-                </p>
+            <div class="dogs">
+                <img src="../images/huge.jpg" alt="St. Bernard">
+                <div class="dogInfo">
+                    <h3>Digby</h3>
+                    <p>ID: <span class="dogId">DW-004</span></p>
+                    <p>Breed: St. Bernard</p>
+                    <p>Size: Huge</p>
+                    <p>Excellant horse replacement</p>
+                    <p>Price: $
+                        <span class="price">10.0</span>
+                        <br> <input type="button" class="viewDog" value="More Info">
+                    </p>
+                </div>
             </div>
         </div>
     </main>
@@ -108,6 +117,7 @@
 
     <script src="../scripts/dogs.js"></script>
     <script src="../scripts/booking.js"></script>
+    <script src="../scripts/inputValidator.js"></script>
 
 </body>
 </html>
