--- a/GUI/booking.html
+++ b/GUI/booking.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Booking</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="../helpers/jQuery/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <header>
@@ -34,7 +35,19 @@
         </ul>
     </nav>
 
-    <main></main>
+    <main>
+        <div id="bookingDetails"></div>
+        <form id="bookingInfo">
+            <label for="bookingName">Name: </label>
+            <input type="text" id="bookingName" required>
+            <small id="bookingNameError"></small>
+            <br>
+            <input type="submit" id="bookingSave" value="Save">
+        </form>
+    </main>
     <footer></footer>
+
+    <script src="../scripts/booking.js"></script>
+    <script src="../scripts/inputValidator.js"></script>
 </body>
 </html>
