Fix warning based on JsHint

--- a/GUI/animals.html
+++ b/GUI/animals.html
@@ -15,7 +15,7 @@
                     <label for="loginUser">Username: </label>
                     <input type="text" name="loginUser" id="loginUser"><br>
                     <label for="loginPassword">Password: </label>
-                    <input type="text" for="loginPassword" id="loginPassword"><br>
+                    <input type="text" name="loginPassword" id="loginPassword"><br>
                     <input type="submit" id="loginSubmit" value="Login"><br>
                     <a href="admin.html">
                         <input type="button" id="loginAdmin" value="Login as Admin">
@@ -44,7 +44,7 @@
             <input type="time" id="pickupTime" name="pickupTime"
                    value="14:00"
                    min="09:00" max="18:00" required>
-            <small for="pickupTime"> Office hours are between 9:00 and 16:00</small>
+            <small> Office hours are between 9:00 and 16:00</small>
             <br>
             <label for="numHours">Number of Hours: </label>
             <input type="text" id="numHours" required>
