--- a/GUI/booking.html
+++ b/GUI/booking.html
@@ -15,7 +15,7 @@
                     <label for="loginUser">Username: </label>
                     <input type="text" name="loginUser" id="loginUser"><br>
                     <label for="loginPassword">Password: </label>
-                    <input type="text" for="loginPassword" id="loginPassword"><br>
+                    <input type="text" name="loginPassword" id="loginPassword"><br>
                     <input type="submit" id="loginSubmit" value="Login"><br>
                     <a href="admin.html">
                         <input type="button" id="loginAdmin" value="Login as Admin">
