Fix html file according to validator

--- a/GUI/animals.html
+++ b/GUI/animals.html
@@ -17,9 +17,7 @@
                     <label for="loginPassword">Password: </label>
                     <input type="text" name="loginPassword" id="loginPassword"><br>
                     <input type="submit" id="loginSubmit" value="Login"><br>
-                    <a href="admin.html">
-                        <input type="button" id="loginAdmin" value="Login as Admin">
-                    </a>
+                    <input type="button" id="loginAdmin" value="Login as Admin" onclick="location.href='admin.html'">
                 </form>
             </div>
         </div>
